src/network/access/qnetworkreplyimpl.cpp
@@ -1018,10 +1018,6 @@ bool QNetworkReplyImplPrivate::migrateBackend()
     if (state == Finished || state == Aborted)
         return true;
 
-    // Backend does not support resuming download.
-    if (!backend->canResume())
-        return false;
-
     // Request has outgoing data, not migrating.
     if (outgoingData)
         return false;
@@ -1029,6 +1025,10 @@ bool QNetworkReplyImplPrivate::migrateBackend()
     // Request is serviced from the cache, don't need to migrate.
     if (copyDevice)
         return true;
+
+    // Backend does not support resuming download.
+    if (!backend->canResume())
+        return false;
 
     state = QNetworkReplyImplPrivate::Reconnecting;
 
